# ============================================================
# TEMPLATE APP - DO NOT BUILD OR INSTALL
# ============================================================
#
# This is a reference template for creating new Marathon apps.
# It should NOT be built or installed to the system.
#
# To use this template:
#   1. Copy this directory to apps/yourapp/
#   2. Update manifest.json, CMakeLists.txt, and QML files
#   3. Add add_subdirectory(yourapp) to apps/CMakeLists.txt
#
# ============================================================

message(WARNING "Template app should not be built. This is a reference template only.")
message(WARNING "If you need to build an app based on this template:")
message(WARNING "  1. Copy apps/template/ to apps/yourapp/")
message(WARNING "  2. Customize manifest.json and QML files")
message(WARNING "  3. Add add_subdirectory(yourapp) to apps/CMakeLists.txt")

# Intentionally empty - no build or install rules

